--- a/Web/intex.html
+++ b/Web/intex.html
@@ -2,6 +2,7 @@
 layout: default
 ---
 <div class="container">
+    <script src="https://unpkg.com/@supabase/supabase-js"></script>
     {% for beatmap in site.data.beatmaps %}
         <div class="header">
             <div class="thumbnail">
