--- a/Web/intex.html
+++ b/Web/intex.html
@@ -1,56 +1,48 @@
----
-layout: default
----
-<div class="container">
-    <script src="https://unpkg.com/@supabase/supabase-js"></script>
-    {% for beatmap in site.data.beatmaps %}
-        <div class="header">
-            <div class="thumbnail">
-                <img src="{{ beatmap.thumbnail }}" alt="비트맵 썸네일">
-            </div>
-            <div class="header-info">
-                <h1>{{ beatmap.artist }} - {{ beatmap.title }} ({{ beatmap.difficulty }})</h1>
-                <p>제작자: {{ beatmap.creator }}</p>
-            </div>
-            <div class="keys-info">
-                Keys: 7K <!-- 혹은 데이터 파일에서 동적으로 가져오기 -->
-            </div>
-        </div>
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>osu! Mania 7K Rice Table</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
 
-        <div class="keys-container">
-            <div class="keys-box">
-                <div>
-                    <span class="info-label">Time</span><br>
-                    <span class="info-value">{{ beatmap.time }}</span>
-                </div>
-                <div>
-                    <span class="info-label">BPM</span><br>
-                    <span class="info-value">{{ beatmap.bpm }}</span>
-                </div>
-            </div>
-            <div class="keys-box">
-                <div>
-                    <span class="info-label">Rice</span><br>
-                    <span class="info-value">{{ beatmap.rice }}</span>
-                </div>
-                <div>
-                    <span class="info-label">Noodles</span><br>
-                    <span class="info-value">{{ beatmap.noodles }}</span>
-                </div>
-            </div>
-            <div class="keys-box">
-                <div>
-                    <span class="info-label">HP</span><br>
-                    <span class="info-value">{{ beatmap.hp }}</span>
-                </div>
-                <div>
-                    <span class="info-label">OD</span><br>
-                    <span class="info-value">{{ beatmap.od }}</span>
-                </div>
-            </div>
-            <div class="star-rating">
-                Star Rating: {{ beatmap.star_rating }}★
-            </div>
-        </div>
-    {% endfor %}
-</div>
+  <!-- 메인 페이지 배경 영상과 제목 -->
+  <div class="main-page">
+    <video autoplay loop muted class="background-video">
+      <source src="your-video-url.mp4" type="video/mp4">
+    </video>
+    <div class="overlay"></div>
+    <h1 class="main-title">osu! mania 7K Rice Table</h1>
+    <nav class="navigation-bar">
+      <!-- 네비게이션 바 -->
+      <ul>
+        <li><a href="#">난이도표</a></li>
+        <li><a href="#">설정</a></li>
+        <li><a href="#">계정</a></li>
+        <li><a href="#">로그인</a></li>
+        <li><a href="#">로그아웃</a></li>
+      </ul>
+    </nav>
+  </div>
+
+  <!-- 비트맵 링크 입력 및 버튼 -->
+  <div class="input-section">
+    <input type="text" id="beatmap-link" placeholder="osu! 비트맵 링크를 입력하세요" />
+    <button id="fetch-beatmap">비트맵 가져오기</button>
+  </div>
+
+  <!-- 비트맵 카드 및 드래그 앤 드롭 -->
+  <div class="card-section">
+    <div class="drop-zone" id="drop-zone">
+      <p>여기에 카드를 드래그하여 추가하세요</p>
+    </div>
+    <div id="beatmap-cards" class="card-container">
+      <!-- 비트맵 카드가 여기에 동적으로 추가됩니다 -->
+    </div>
+  </div>
+
+  <script src="script.js"></script>
+</body>
+</html>
